# lizard_b

./: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
components/animals_manager/: CMakeLists.txt  animal_database.c  animals_manager.c  breeding_records.c  medical_records.c  species_database.c
components/animals_manager/include/: animals_manager.h
components/data_export/: CMakeLists.txt  backup_manager.c  csv_exporter.c  data_export.c  json_exporter.c  pdf_generator.c
components/data_export/include/: data_export.h
components/lvgl__lvgl/: CMakeLists.txt  placeholder.c
components/lvgl_component/: CMakeLists.txt  lvgl_component.c  lvgl_conf.h  lvgl_display.c  lvgl_display.h  lvgl_touch.c  lvgl_touch.h
components/lvgl_component/include/: lvgl_component.h
components/lvgl_component/ui/: animals_ui.c  animals_ui.h  dashboard.c  dashboard.h  settings_ui.c  settings_ui.h  stocks_ui.c  stocks_ui.h  terrariums_ui.c  terrariums_ui.h
components/regulatory_compliance/: CMakeLists.txt  cites_checker.c  document_generator.c  eu_regulations.c  french_regulations.c  regulatory_compliance.c
components/regulatory_compliance/include/: regulatory_compliance.h
components/security_manager/: CMakeLists.txt  audit_log.c  encryption.c  security_manager.c  session_manager.c  user_management.c
components/security_manager/include/: security_manager.h
components/stock_manager/: CMakeLists.txt  alert_manager.c  inventory_database.c  stock_manager.c  supplier_manager.c
components/stock_manager/include/: stock_manager.h
components/terrarium_monitor/: CMakeLists.txt  alarm_manager.c  environmental_control.c  sensor_manager.c  terrarium_monitor.c
components/terrarium_monitor/include/: terrarium_monitor.h
components/transaction_manager/: CMakeLists.txt  certificate_generator.c  document_manager.c  financial_tracker.c  transaction_manager.c
components/transaction_manager/include/: transaction_manager.h
components/web_interface/: CMakeLists.txt  api_endpoints.c  http_handlers.c  web_auth.c  web_interface.c  websocket_server.c
components/web_interface/include/: web_interface.h
main/: CMakeLists.txt  app_main.c  main.c  system_init.c
main/include/: app_config.h  app_main.h  system_init.h  system_types.h
