idf_component_register(
    SRCS 
        "animals_manager.c"
        "animal_database.c"
        "species_database.c"
        "medical_records.c"
        "breeding_records.c"
    INCLUDE_DIRS 
        "include"
    REQUIRES 
        nvs_flash
        json
        esp_timer
        freertos
        main
)